--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT = 3000
 
 
-MONGO_URL="mongodb://user:user@localhost:27017"
+# MONGO_URL="mongodb://user:user@localhost:27017"
+MONGO_URL="mongodb://localhost:27017"
